# logistica-me

./: .env  .env.example  .gitignore  API  API.py  LICENSE  README.md  SETUP_POSTGRES.md  data_consistency_tests.py  data_processing_pipeline.py  dataset.parquet  dataset_b3884914-82a8-45c9-9c56-f37e87f45077.parquet  dataset_b3884914-82a8-45c9-9c56-f37e87f45077_2.parquet  dbt_seed_config.yml  docker-commands.ps1  docker-compose.yml  download_conformity_summary.json  incremental_dbt_seed.py  industry_standard_data_quality_analysis.md  postgres_setup.sql  pyproject.toml  read_dataset.py
.claude/: memory.md  register_token.py  settings.local.json  tokens.md
.opencode/: README.md  memory.md  tokens.md
data/processed/: dataset_b3884914-82a8-45c9-9c56-f37e87f45077_00001_cleaning_report.json  dataset_b3884914-82a8-45c9-9c56-f37e87f45077_00001_processed.csv  dataset_b3884914-82a8-45c9-9c56-f37e87f45077_00002_cleaning_report.json  dataset_b3884914-82a8-45c9-9c56-f37e87f45077_00003_cleaning_report.json  dataset_b3884914-82a8-45c9-9c56-f37e87f45077_00004_cleaning_report.json  dataset_b3884914-82a8-45c9-9c56-f37e87f45077_00005_cleaning_report.json  dataset_b3884914-82a8-45c9-9c56-f37e87f45077_00006_cleaning_report.json  dataset_b3884914-82a8-45c9-9c56-f37e87f45077_00007_cleaning_report.json  dataset_b3884914-82a8-45c9-9c56-f37e87f45077_00007_processed.csv  (+3 more)
logistica_dbt/: .env.example  README.md  README_TESTS.md  dbt_project.yml  profiles_example.yml  seeds.yml
logistica_dbt/macros/: generate_csv_seed.sql
opencode/: seed_state.json  tokens.md
src/: __init__.py
(+50 files in other folders)
